# merge-fox-sanctuary

./: Cargo.toml  README.md
src/: app_state.rs  clickable.rs  fox.rs  fox_lot.rs  main.rs  merge.rs  money.rs  search.rs  ui.rs
src/merge/: fox_lot.rs  ui.rs
src/search/: animation.rs  cell.rs  ui.rs
