[package]
name = "merge-fox-sanctuary"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.*"
once_cell = "1.20.*"
strum = "0.*"
strum_macros = "0.*"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[build]
rustc-wrapper = "sccache"
